# iclr-playground

./: AutoReviewer_APPROACH_SUMMARY.md  AutoReviewer_MINERU_USAGE.md  AutoReviewer_PDF_APPROACH.md  README.md  environment.yml
AutoReviewer/: .gitignore  pyproject.toml
AutoReviewer/notebooks/: Untitled.ipynb  analyze_data.ipynb  explore_api.ipynb  load_datasets.ipynb  tf_idf_analysis.ipynb
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-abstract/citation/: generated_features.csv  test_results.csv
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-abstract/decision/: generated_features.csv
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-conclusion/binary/: generated_features.csv  test_results.csv
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-conclusion/citation/: generated_features.csv  test_results.csv
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-conclusion/decision/: generated_features.csv
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-introduction/binary/: test_results.csv
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-introduction/citation/: test_results.csv
AutoReviewer/notebooks/generated_tf_idf_analysis/clean-introduction/decision/: generated_features.csv  test_results.csv
AutoReviewer/sbatch/: create_train_test_split.sbatch  download_missing_pdfs.sbatch  enrichen_test.sbatch  enrichen_train.sbatch  generate_hf_dataset.sbatch  get_jupyter.sbatch  mineru_2020_fixed.sbatch  mineru_2020_fixed_pt2.sbatch  mineru_array.sbatch  normalize_mineru.sbatch  normalize_mineru_array.sbatch  normalize_reviews_array.sbatch  normalize_reviews_array_new_prompt.sbatch  normalize_reviews_array_other.sbatch  pdf_to_images_array.sbatch  run_marker_2025_p1.sbatch  run_marker_2025_p2.sbatch  run_marker_2025_p3.sbatch  run_marker_2025_p4.sbatch  run_marker_convert.sbatch  run_permutations_dynamic.sbatch  run_permutations_iclrds_2.sbatch  sync_uv.sbatch  tf_idf_grid_search.sbatch  tf_idf_sections.sbatch
AutoReviewer/scripts/: analyze_mineru_stats.py  create_train_test_split.py  enrichen_hf_dataset_subset.py  fix_2020_pdf_manifest.py  generate_hf_dataset.py  launch_test_gen.sh  merge_enriched_shards.py  merge_mineru_outputs.py  prepare_2020_fixed_batch.py  prepare_2020_fixed_pt2.py  prepare_mineru_batches.py  split_2025.py  tf_idf_analysis.py
AutoReviewer/sh/: copy_jl_pdfs.sh  download_all_years.sh  download_pdfs_parallel.sh  mineru_cmds.txt  run_marker_convert.sh
(+103 files in other folders)
